# bevy_prefs_lite

./: Cargo.toml  README.md
examples/: counter.rs  windowpos.rs
src/: autosave.rs  lib.rs  prefs.rs  prefs_fs.rs  prefs_json.rs  prefs_toml.rs  prefs_wasm.rs  store_fs.rs  store_wasm.rs
