[package]
name = "bevy_prefs_lite"
version = "0.1.1"
edition = "2021"
description = "A simple preferences system for Bevy"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.15.0", default-features = false }
serde = "1.0.217"

[dev-dependencies]
bevy = { version = "0.15.0", default-features = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = { version = "5.0.1" }
toml = { version = "0.8.19" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_json = "1.0.134"
web-sys = { version = "0.3.76", default-features = false, features = [
  "Window",
  "Storage",
] }
